# billiards-projection-api

./: CMakeLists.txt  projection_api.pro  projection_api.service
src/: DisplaySettings.h  RenderLocation.h  construct_map.h  project_api.cpp
src/front_end/: FrontEnd.h
src/front_end/glut/: GlutFrontEnd.h  gl_render.h  glut_front_end.cpp
src/front_end/glut/image_utils/: GlImage.cpp  GlImage.h  png_io.cpp  png_io.h
src/front_end/qt/: PathFiller.h  ProjectorWidget.cpp  ProjectorWidget.h  QtFrontEnd.cpp  QtFrontEnd.h  QtReceiver.h  paint.h  qt_front_end.cpp
